--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0E9DEE3D4292F6C9B0DC26976E77D5CD
 ProjectName=Third Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
