--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,6 +10,7 @@ BuildConfiguration=PPBC_Shipping
 Build=Always
 BuildTarget=Lost and Bitos
 StagingDirectory=(Path="H:/Bitos")
+ForDistribution=True
 
 [Staging]
 +WhitelistConfigFiles=ProjetGGJ2021/Config/DefaultConfig.ini
